--- a/ios/RnLocationTest/Info.plist
+++ b/ios/RnLocationTest/Info.plist
@@ -38,7 +38,9 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Need location services to work</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Need location services to work</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
