--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-native-community/geolocation": "^2.0.2",
+    "geolib": "^3.3.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-geolocation-service": "^5.0.0"
